--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "nodemon": "2.0.22",
     "nyc": "15.1.0",
     "sinon": "11.1.1",
-    "sinon-chai": "3.7.0"
+    "sinon-chai": "3.7.0",
+    "snakeize": "^0.1.0"
   }
 }
